# V13

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: audit.yml
apps/backend/: .dockerignore  Cargo.toml  rustfmt.toml
apps/backend/src/: ai_metrics.rs  audio_engine.rs  llm_engine.rs  main.rs  state_machine.rs  websocket.rs
apps/frontend/: debug-electron.js  eslint.config.mjs  forge.config.js  main-minimal.mjs  main.mjs  nginx.conf  package-lock.json  package.json  test-electron.js  test-esm.mjs  test-internal.js  test-launch-default.mjs  test-launch-dynamic.mjs  test-launch-ns.mjs  test-launch-renamed.mjs  test-launch-side.mjs  test-launch-subpath.mjs  test-launch.mjs  test-require.js  test-standard.js  test_module_load.js
apps/frontend/electron/: main.ts  preload.ts  tsconfig.json  webpack.config.js
apps/frontend/scripts/: launch.js
apps/frontend/src/: index.html  styles.css  types.d.ts
apps/frontend/temp_test/: main.js  main.js.map  main.mjs  package-lock.json  package.json  package.json.frontend_backup  preload.js  preload.js.map  test-launch-dist.mjs
apps/middleware/: .dockerignore  .eslintrc.json  dependency_graph.txt  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/middleware/src/: app.ts  server.ts
apps/middleware/tests/: health.test.ts
docs/: API.md  ARCHITECTURE.md  TROUBLESHOOTING.md  UPDATE_LOG.md  USER_MANUAL.md  audit_report.md
infra/config/: .env.example
infra/management/: healthcheck.py
infra/management/vibe_toolkit/: benchmark.py  (+5 more)
infra/scripts/: Update-Docs.ps1  ollama_audit.py
(+26 files in other folders)
