[package]
name = "backend"
version = "13.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.7.5", features = ["ws"] } # Reverting to known stable axum if needed, but keeping existing version if compatible
cpal = "0.15.3" # Aligning with typical stable versions if 0.17 is risky? 
# No, let's just fix the token line. The user might have upgraded others.
# Actually, I should just remove local `token` line.
# And fix edition.

tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
rustfft = "6.2"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio-retry = "0.3"
jsonschema = "0.17"
lazy_static = "1.4"
futures-util = "0.3"